# XJTU-25RMV-Task03

./: .gitignore  CMakeLists.txt  README.md
include/: BallDetector.h  TrajectoryFitter.h
src/: BallDetector.cpp  TrajectoryFitter.cpp  main.cpp
